# rustwebservice

./: .gitlab-ci.yml  Cargo.toml  Dockerfile  Multistage.Dockerfile  README.md  k8s-rws.yaml
src/: httpserver.rs  lib.rs  restapihttpserver.rs
