[package]
name = "rustwebservice"
version = "0.2.0"
authors = ["jaya-p"]
edition = "2018"

[dependencies]
# Hyper used for HTTP server library
hyper = "0.13"
# Tokio runtime for Hyper
tokio = { version = "0.2", features = ["full"] }
# Unit testing
reqwest = { version = "0.10.4", features = ["blocking"] }